add api nginx conf

--- a/racktemp.conf
+++ b/racktemp.conf
@@ -63,6 +63,18 @@ server {
 		include fastcgi_params;
 	}
 
+	# if api pass to index.php to make it look nicer
+  #
+  location /api/ {
+      fastcgi_connect_timeout 3s;     # default of 60s is just too long
+      fastcgi_read_timeout 10s;       # default of 60s is just too long
+
+      try_files $uri /api/index.php;
+
+      fastcgi_pass unix:/var/run/php5-fpm.sock;
+      include fastcgi_params;
+  }
+
 	# deny access to .htaccess files, if Apache's document root
 	# concurs with nginx's one
 	#
