--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ bower_components
 
 app/js
 app/style
+composer.phar
+vendor/
+
+# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
+# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
+# composer.lock
