--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,13 @@
 {
+  "name": "Snilius/RackTemp",
   "require": {
-    "phpmailer/phpmailer": "5.2.*"
-  }
+      "slim/slim": "2.*",
+      "phpmailer/phpmailer": "5.2.*"
+  },
+  "authors": [
+      {
+          "name": "Victor Häggqvist",
+          "email": "victor@snilius.com"
+      }
+  ]
 }
