make use of composer to do all the things

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
           "name": "Victor Häggqvist",
           "email": "victor@snilius.com"
       }
-  ]
+  ],
+  "autoload": {
+      "psr-4": {"Snilius\\": "php/"}
+  }
 }
