--- a/vagrantconf/racktemp.conf
+++ b/vagrantconf/racktemp.conf
@@ -27,6 +27,9 @@ server {
   # Make site accessible from http://localhost/
   server_name localhost;
 
+  access_log /vagrant/nginx_access.log;
+  error_log /vagrant/nginx_error.log;
+  
   location / {
     # First attempt to serve request as file, then
     # as directory, then fall back to displaying a 404.
