--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
   ],
   "dependencies": {
     "d3": "~3.4.6",
-    "sass-bootstrap": "~3.0.2",
-    "c3": "~0.1.34"
+    "c3": "~0.1.34",
+    "bootstrap-sass-twbs": "~3.2.0"
   }
 }
