--- a/package.json
+++ b/package.json
@@ -1,47 +1,30 @@
 {
-  "name": "racktemp",
-  "version": "0.0.1",
+  "name": "RackTemp",
+  "version": "0.1.0",
   "description": "tempplatform",
-  "main": "wooooo",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@github.com/racktemp/racktemp.git"
+    "url": "https://github.com/victorhaggqvist/racktemp.git"
   },
   "keywords": [
     "temp"
   ],
-  "author": "victor",
+  "author": "Victor Häggqvist <victor@snilius.com>",
   "license": "GPLv3",
-  "engines": {
-    "node": ">= 0.10.0"
-  },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-copy": "^0.5.0",
-    "grunt-phplint": "0.0.5",
-    "grunt-notify": "^0.3.0"
-  },
-  "bwr": {
-    "bootstrap": {
-      "js": "bower_components/sass-bootstrap/dist/js/bootstrap.min.js",
-      "fonts": "bower_components/sass-bootstrap/dist/fonts/*"
-    },
-    "d3": "bower_components/d3/d3.min.js",
-    "c3": {
-      "js": "bower_components/c3/c3.min.js",
-      "css": "bower_components/c3/c3.css"
-    },
-    "jquery": "bower_components/jquery/dist/jquery.min.js",
-    "modernizr": "bower_components/modernizr/modernizr.js"
-  },
-  "appjs": "app/js/",
-  "appcss": "app/style/"
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-sass": "^0.7.3",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-notify": "^0.3.0",
+    "grunt-phplint": "0.0.5"
+  }
 }
