--- a/vagrantconf/racktemp.conf
+++ b/vagrantconf/racktemp.conf
@@ -29,7 +29,10 @@ server {
 
   access_log /vagrant/nginx_access.log;
   error_log /vagrant/nginx_error.log;
-  
+
+  # compress js and css too
+  gzip_types application/x-javascript text/css;
+
   location / {
     # First attempt to serve request as file, then
     # as directory, then fall back to displaying a 404.
