--- a/racktemp.conf
+++ b/racktemp.conf
@@ -27,6 +27,9 @@ server {
 	# Make site accessible from http://localhost/
 	server_name localhost;
 
+	# compress js and css too
+  gzip_types application/x-javascript text/css;
+
 	location / {
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
