--- a/racktemp.conf
+++ b/racktemp.conf
@@ -19,7 +19,7 @@
 
 server {
 	listen   80; ## listen for ipv4; this line is default and implied
-	listen   [::]:80 default_server ipv6only=on; ## listen for ipv6
+	#listen   [::]:80 default_server ipv6only=on; ## listen for ipv6
 
 	root /home/pi/racktemp/app;
 	index index.php index.html index.htm;
