--- a/racktemp.conf
+++ b/racktemp.conf
@@ -28,7 +28,11 @@ server {
 	server_name localhost;
 
 	# compress js and css too
-  gzip_types application/x-javascript text/css;
+	gzip_types application/x-javascript text/css;
+
+	#logs
+	access_log /home/pi/racktemp/nginx_access.log;
+	error_log /home/pi/racktemp/nginx_error.log;
 
 	location / {
 		# First attempt to serve request as file, then
