--- a/vagrantconf/racktemp.conf
+++ b/vagrantconf/racktemp.conf
@@ -21,109 +21,26 @@ server {
   listen   80; ## listen for ipv4; this line is default and implied
   listen   [::]:80 default_server ipv6only=on; ## listen for ipv6
 
-  root /vagrant/app;
-  index index.php index.html index.htm;
-
-  # Make site accessible from http://localhost/
-  server_name localhost;
-
-  access_log /vagrant/nginx_access.log;
-  error_log /vagrant/nginx_error.log;
-
-  # compress js and css too
-  gzip_types application/x-javascript text/css;
-
-  location / {
-    # First attempt to serve request as file, then
-    # as directory, then fall back to displaying a 404.
-    try_files $uri $uri/ /index.html;
-    # Uncomment to enable naxsi on this location
-    # include /etc/nginx/naxsi.rules
-  }
-
-  # Only for nginx-naxsi used with nginx-naxsi-ui : process denied requests
-  #location /RequestDenied {
-  # proxy_pass http://127.0.0.1:8080;
-  #}
-
-  #error_page 404 /404.html;
-
-  # redirect server error pages to the static page /50x.html
-  #
-  #error_page 500 502 503 504 /50x.html;
-  location = /50x.html {
-    root /usr/share/nginx/www;
-  }
-
-  # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-  #
-  location ~ \.php$ {
-    fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    # NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-
-    # With php5-fpm:
-    fastcgi_pass unix:/var/run/php5-fpm.sock;
-    fastcgi_index index.php;
-    include fastcgi_params;
-  }
-
-
-  # if api pass to index.php to make it look nicer
-  #
-  location /api/ {
-      fastcgi_connect_timeout 3s;     # default of 60s is just too long
-      fastcgi_read_timeout 10s;       # default of 60s is just too long
-
-      try_files $uri /api/index.php;
-
-      fastcgi_pass unix:/var/run/php5-fpm.sock;
-      include fastcgi_params;
-  }
-
-  # deny access to .htaccess files, if Apache's document root
-  # concurs with nginx's one
-  #
-  #location ~ /\.ht {
-  # deny all;
-  #}
+  include /vagrant/vagrantconf/racktemp-common.conf;
 }
 
-
-# another virtual host using mix of IP-, name-, and port-based configuration
-#
-#server {
-# listen 8000;
-# listen somename:8080;
-# server_name somename alias another.alias;
-# root html;
-# index index.html index.htm;
-#
-# location / {
-#   try_files $uri $uri/ =404;
-# }
-#}
 
 
 # HTTPS server
 #
-#server {
-# listen 443;
-# server_name localhost;
-#
-# root html;
-# index index.html index.htm;
-#
-# ssl on;
-# ssl_certificate cert.pem;
-# ssl_certificate_key cert.key;
-#
-# ssl_session_timeout 5m;
-#
-# ssl_protocols SSLv3 TLSv1;
-# ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
-# ssl_prefer_server_ciphers on;
-#
-# location / {
-#   try_files $uri $uri/ =404;
-# }
-#}
+server {
+  listen 443;
+
+  include /vagrant/vagrantconf/racktemp-common.conf;
+
+  ssl on;
+  ssl_certificate /vagrant/vagrantconf/dev.crt;
+  ssl_certificate_key /vagrant/vagrantconf/dev.key;
+
+  ssl_session_timeout 5m;
+
+  ssl_protocols SSLv3 TLSv1;
+  ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
+  ssl_prefer_server_ciphers on;
+
+}
