--- a/racktemp.conf
+++ b/racktemp.conf
@@ -1,10 +1,3 @@
-# You may add here your
-# server {
-#	...
-# }
-# statements for each of your virtual hosts to this file
-
-##
 # You should look at the following URL's in order to grasp a solid understanding
 # of Nginx configuration files in order to fully unleash the power of Nginx.
 # http://wiki.nginx.org/Pitfalls
@@ -21,111 +14,24 @@ server {
 	listen   80; ## listen for ipv4; this line is default and implied
 	#listen   [::]:80 default_server ipv6only=on; ## listen for ipv6
 
-	root /home/pi/racktemp/app;
-	index index.php index.html index.htm;
-
-	# Make site accessible from http://localhost/
-	server_name localhost;
-
-	# compress js and css too
-	gzip_types application/x-javascript text/css;
-
-	#logs
-	access_log /home/pi/racktemp/nginx_access.log;
-	error_log /home/pi/racktemp/nginx_error.log;
-
-	location / {
-		# First attempt to serve request as file, then
-		# as directory, then fall back to displaying a 404.
-		try_files $uri $uri/ /index.html;
-		# Uncomment to enable naxsi on this location
-		# include /etc/nginx/naxsi.rules
-	}
-
-	# Only for nginx-naxsi used with nginx-naxsi-ui : process denied requests
-	#location /RequestDenied {
-	#	proxy_pass http://127.0.0.1:8080;
-	#}
-
-	#error_page 404 /404.html;
-
-	# redirect server error pages to the static page /50x.html
-	#
-	#error_page 500 502 503 504 /50x.html;
-	location = /50x.html {
-		root /usr/share/nginx/www;
-	}
-
-	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-	#
-	location ~ \.php$ {
-		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		# NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-
-		# With php5-cgi alone:
-		# fastcgi_pass 127.0.0.1:9000;
-		# With php5-fpm:
-		fastcgi_pass unix:/var/run/php5-fpm.sock;
-		fastcgi_index index.php;
-		include fastcgi_params;
-	}
-
-	# if api pass to index.php to make it look nicer
-  #
-  location /api/ {
-      fastcgi_connect_timeout 3s;     # default of 60s is just too long
-      fastcgi_read_timeout 10s;       # default of 60s is just too long
-
-      try_files $uri /api/index.php;
-
-      fastcgi_pass unix:/var/run/php5-fpm.sock;
-      include fastcgi_params;
-  }
-
-	# deny access to .htaccess files, if Apache's document root
-	# concurs with nginx's one
-	#
-	#location ~ /\.ht {
-	#	deny all;
-	#}
+	include /home/pi/racktemp/racktemp-common.conf;
 }
-
-
-# another virtual host using mix of IP-, name-, and port-based configuration
-#
-#server {
-#	listen 8000;
-#	listen somename:8080;
-#	server_name somename alias another.alias;
-#	root html;
-#	index index.html index.htm;
-#
-#	location / {
-#		try_files $uri $uri/ =404;
-#	}
-#}
-
 
 # HTTPS server
 #
 #server {
 #	listen 443;
-#	server_name localhost;
+#	#listen   [::]:443 default_server ipv6only=on; ## listen for ipv6
 #
-#	root html;
-#	index index.html index.htm;
+#	include /home/pi/racktemp/racktemp-common.conf;
 #
 #	ssl on;
-#	ssl_certificate cert.pem;
-#	ssl_certificate_key cert.key;
+#	ssl_certificate /home/pi/racktemp/ssl/racktemp.crt;
+#	ssl_certificate_key /home/pi/racktemp/ssl/racktemp.key;
 #
 #	ssl_session_timeout 5m;
 #
 #	ssl_protocols SSLv3 TLSv1;
 #	ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
 #	ssl_prefer_server_ciphers on;
-#
-#	location / {
-#		try_files $uri $uri/ =404;
-#	}
 #}
