--- a/racktemp.conf
+++ b/racktemp.conf
@@ -14,6 +14,7 @@ server {
 	listen   80; ## listen for ipv4; this line is default and implied
 	#listen   [::]:80 default_server ipv6only=on; ## listen for ipv6
 
+	#return 301 https://$host$request_uri;
 	include /home/pi/racktemp/racktemp-common.conf;
 }
 
