--- a/app/lib/config.inc.sample
+++ b/app/lib/config.inc.sample
@@ -4,7 +4,7 @@ $db_conf = new stdClass;
 $db_conf->host  ="localhost";
 $db_conf->db = "racktemp";
 $db_conf->user = "racktemp";
-$db_conf->pass = "password";
+$db_conf->pass = "SillyPassword";
 
 defined("LIB_PATH") or define("LIB_PATH",realpath(dirname(__FILE__)));
 defined("TEMPLATES_PATH") or define("TEMPLATES_PATH",realpath(dirname(__FILE__)).'/templates');
