--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
   "name": "Snilius/RackTemp",
   "require": {
-      "slim/slim": "2.*",
-      "phpmailer/phpmailer": "5.2.*"
-  },
-  "authors": [
-      {
-          "name": "Victor Häggqvist",
-          "email": "victor@snilius.com"
-      }
-  ],
-  "autoload": {
-      "psr-4": {"Snilius\\": "php/"}
+    "slim/slim": "2.*",
+    "mailgun/mailgun-php": "~1.7"
+    },
+    "authors": [
+    {
+      "name": "Victor Häggqvist",
+      "email": "victor@snilius.com"
+    }
+    ],
+    "autoload": {
+      "psr-4": {"Snilius\\": "src/"}
+    }
   }
-}
