--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -20,7 +20,30 @@ services:
     app.security.pamform_authenticator:
         class: AppBundle\Security\PAMFormAuthenticator
         arguments: [ @app.security.pampassword_checker ]
-
+    app.sensor.sensor_controller:
+        class: AppBundle\Sensor\SensorController
+        arguments: [ @doctrine.orm.entity_manager ]
+    app.sensor.sensor_tool:
+        class: AppBundle\Sensor\SensorTool
+        arguments: [ @doctrine.orm.entity_manager, @service_container ]
+    app.sensor.sensor_stats:
+        class: AppBundle\Sensor\SensorStats
+        arguments: [ @service_container ]
+    app.security.api_key_user_provider:
+        class: AppBundle\Security\ApiKeyUserProvider
+        arguments: [ @doctrine.orm.entity_manager, @logger ]
+    app.security.api_key_authenticator:
+        class: AppBundle\Security\ApiKeyAuthenticator
+        arguments: [ @logger ]
+    app.util.mailer:
+        class: AppBundle\Util\Mailer
+        arguments: [ @app.util.settings, @logger ]
+    app.api.graph_api:
+        class: AppBundle\Api\GraphApi
+        arguments: [ @app.sensor.sensor_controller, @app.sensor.sensor_stats ]
+    app.console.read_temp_command:
+        class: AppBundle\Console\ReadTempCommand
+        arguments: [ @app.sensor.sensor_controller ]
 
 #    service_name:
 #        class: AppBundle\Directory\ClassName
