--- a/rackremp.conf
+++ b/rackremp.conf
@@ -2,6 +2,12 @@ server {
     server_name rtmaster;
     root /home/victor/racktemp/app/web;
 
+    listen   443;
+
+    ssl    on;
+    ssl_certificate    /etc/ssl/your_domain_name.pem; # (or bundle.crt)
+    ssl_certificate_key    /etc/ssl/your_domain_name.key;
+
     location / {
         # try to serve file directly, fallback to app.php
         try_files $uri /app.php$is_args$args;
