--- a/racktemp.conf.dist
+++ b/racktemp.conf.dist
@@ -1,4 +1,10 @@
 server {
+       listen         80;
+       server_name    rtmaster;
+       return         301 https://$server_name$request_uri;
+}
+
+server {
     server_name rtmaster;
     root /home/victor/racktemp/app/web;
 
