--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
-    "name": "victor/racktemp2",
-    "license": "proprietary",
+    "name": "snilius/racktemp",
+    "description": "Temperature monitoring for Raspberry Pi",
+    "license": "GPL-3.0",
     "type": "project",
     "autoload": {
         "psr-4": {
